# hocr-tools

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api.rst  cli.rst  conf.py  index.rst
hocr_tools/tools/: hocr_check.py  hocr_cut.py  hocr_eval.py  hocr_eval_geom.py  hocr_eval_lines.py  hocr_extract_g1000.py  hocr_extract_images.py  hocr_merge_dc.py  hocr_pdf.py
hocr_tools/utils/: edit_utils.py
hocr_tools_lib/tools/: hocr_check.py  hocr_combine.py  hocr_cut.py  hocr_eval.py  hocr_eval_geom.py  hocr_eval_lines.py  hocr_extract_g1000.py  hocr_extract_images.py  hocr_lines.py  hocr_merge_dc.py  hocr_pdf.py  hocr_split.py  hocr_wordfreq.py
hocr_tools_lib/utils/: edit_utils.py  node_utils.py  rectangle_utils.py  text_utils.py  typing_utils.py
tests/: __init__.py  test_smoke_tests.py
tests/tools/: test_hocr_check.py  test_hocr_combine.py  test_hocr_cut.py  test_hocr_eval.py  test_hocr_eval_geom.py  test_hocr_eval_lines.py  test_hocr_extract_images.py  test_hocr_lines.py  test_hocr_merge_dc.py  test_hocr_pdf.py  test_hocr_split.py  test_hocr_wordfreq.py
tests/utils/: test_node_utils.py
